fixed icons not centered on iphone

--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -68,8 +68,6 @@ nav {
 
         aspect-ratio: 1;
 
-        display: grid;
-        place-items: center;
 
         background-color: #313338;
         font-size: 28px;
@@ -83,6 +81,10 @@ nav {
 
         .img-container {
           color: white;
+          width: 100%;
+          height: 100%;
+          display: grid;
+          place-items: center;
         }
 
         .link-title {
