--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -403,8 +403,6 @@ nav .link-list .link-action {
 }
 nav .link-list .link-action .link {
   aspect-ratio: 1;
-  display: grid;
-  place-items: center;
   background-color: #313338;
   font-size: 28px;
   border-radius: 50%;
@@ -414,6 +412,10 @@ nav .link-list .link-action .link {
 }
 nav .link-list .link-action .link .img-container {
   color: white;
+  width: 100%;
+  height: 100%;
+  display: grid;
+  place-items: center;
 }
 nav .link-list .link-action .link .link-title {
   display: none;
